# chat_connector

./: .env.example  LICENSE  Makefile  README.md  business_logic.py  chat_transport.py  main.py  mappings.py  pyproject.toml  settings.py  setup.py  utils.py
tests/: conftest.py  test_chat_transport.py  test_discord_provider.py  test_telegram_provider.py  test_utils.py
